<resources>
    <string name="app_name">微聚竞投</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="http_can_not_connect_to_server">无法连接到服务器，请稍后再试</string>
    <string name="http_server_exception">服务器繁忙，请稍后再试</string>

    <!-- 主界面顶部tab标签 -->
    <string name="home_invest_top_tab_incoming">即将收益</string>
    <string name="home_invest_top_tab_hot_project">火热推荐</string>
    <string name="home_invest_top_tab_success">成功项目</string>
    <string name="home_invert_top_tab_search">搜索</string>
    <string name="home_invert_top_tab_earnings_record">已投项目</string>
    <string name="home_invert_top_tab_investment_record">收益项目</string>
    <string name="home_invert_top_tab_investment_normal">常规项目</string>
    <string name="home_invert_top_tab_investment_preferential">特惠项目</string>
    <string name="home_invert_top_tab_dividendt_record">分红</string>
    <string name="title_activity_project_detail">项目详情</string>
    <string name="title_activity_invest_project">投资项目</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>

    <!-- 下拉刷新控件 -->
    <string name="pull_to_refresh_widget_pull_to_refresh">下拉可以刷新</string>
    <string name="pull_to_refresh_widget_release_to_refresh">释放立即刷新</string>
    <string name="pull_to_refresh_widget_refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_project_edit">发起项目</string>
    <string name="title_activity_improve_user_info">资料完善</string>

    <!-- 上拉加载状态 -->
    <string name="pull_to_load_loading">加载中</string>
    <string name="pull_to_load_failure">加载失败</string>
    <string name="pull_to_load_no_more">已无更多</string>
    <string name="title_activity_image_explorer">图片</string>

    <!-- 投资界面 -->
    <string name="invest_project_invested_price">您已入资:%s</string>
    <string name="invest_project_invested_quantity">购买金额:%d</string>
    <string name="invest_project_invested_earnings">您的收益:X</string>
    <string name="invest_project_invested_led">(参与领投)</string>
    <string name="invest_project_invested_follow">(参与跟投)</string>
    <string name="invest_project_invested_goal">本期筹款目标:</string>
    <string name="invest_project_invested_installments">您购买了:%d期</string>
    <string name="invest_project_no_invested_price">您尚未入资</string>
    <string name="invest_project_select_invest_price">点击此处选择入资金额:</string>
    <string name="invest_project_project_progress">筹款进度:%d%%</string>
    <string name="invest_project_lead_invest_info">该项目领投资金为：%s</string>
    
    <!-- 货币单位 -->
    <string name="monetary_unit_rmb">元</string>
    <string name="title_activity_user_info">个人资料</string>

    <!-- 项目列表项 -->
    <string name="project_list_item_stage_info">第%s期 众筹中</string>
    <string name="project_list_item_target_fund">本期筹款目标:</string>
    <string name="project_list_item_start_date">开抢时间:</string>
    <string name="project_list_item_progress">筹款进度:</string>
    <string name="project_list_button_shaking">上下摇晃抢钱</string>
    <string name="project_list_end_preferential">特惠发放已结束</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_change_password">修改密码</string>
    <string name="title_activity_pay_order">PayOrderActivity</string>
    <string name="title_activity_charge">充值</string>
    <string name="title_activity_dot_view_pager">DotViewPagerActivity</string>
    <string name="title_activity_payment">支付</string>
    <string name="title_activity_logo">微聚竞投</string>
    <string name="title_activity_feature">微聚竞投</string>
    <string name="title_activity_image_selected">ImageSelectedActivity</string>
    <string name="title_activity_image_mul_selected">ImageMulSelectedActivity</string>
    <string name="title_activity_progress_action_bar">ProgressActionBarActivity</string>
    <string name="title_activity_entrepreneur">微聚竞投</string>
    <string name="title_activity_agreement">用户服务协议</string>
    <string name="title_activity_developer_agreement">创业者服务协议</string>

    <!-- 项目者，项目记录状态文字 -->
    <string name="home_investment_listview_developer_auditing">项目审核中（需要3到7个工作日）</string>
    <string name="home_investment_listview_developer_notpass">未通过审核</string>
    <string name="home_investment_listview_developer_reservedwait">已通过（进入项目库保留）</string>
    <string name="home_investment_listview_developer_sign">已通过（请等待我们方客服与您联系，请保持电话畅通）</string>
    <string name="home_investment_listview_developer_fundraising">已开始上线筹款</string>
    <string name="home_investment_listview_developer_end">筹款结束（募集款已发出）</string>
    <string name="title_activity_retrieve_password">找回密码</string>
    <string name="title_activity_withdraw">提现</string>
    <string name="title_activity_wxBind">关注我们</string>
    <string name="title_activity_developer_attention">创业者注意事项</string>
    <string name="title_activity_withdraw_selected">选择提现方式</string>
    <string name="title_activity_alipay_bind">绑定支付宝</string>
    <string name="title_activity_notice">通知</string>
    <string name="title_activity_preferential">特惠项目</string>

    <string name="title_test_activity">壹收款</string>
    <string name="good_item_name">橡胶花瓶</string>
    <string name="pingpp_title_activity_pay">支付</string>
    <string name="pingpp_title_activity_pay_sucessed">支付成功</string>
    <string name="pingpp_title_activity_pay_filed">支付失败</string>
    <string name="pingpp_title_activity_success">支付成功</string>
    <string name="pingpp_create_bill">成功下单</string>
    <string name="pingpp_label_bill_name">订单号</string>
    <string name="pingpp_label_amount">总金额</string>
    <string name="pingpp_title_activity_pay_failed">支付失败</string>
    <string name="pingpp_pay_failed">支付失败</string>
    <string name="pingpp_back_activity_pay">再试一次</string>
    <string name="pingpp_copyright">支付接入由Ping++提供</string>
    <string name="pingpp_alipay">支付宝</string>
    <string name="pingpp_wechar">微信支付</string>
    <string name="pingpp_bfb">百度钱包</string>
    <string name="pingpp_upmp">银联支付</string>
    <string name="pingpp_prompt_pay_falied">可能因为网络过于繁忙</string>
    <string name="pingpp_continue_buy">继续购物</string>


</resources>
