<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:background="#ff1e1e1e"
    android:orientation="vertical"
    android:paddingTop="17dp"
    android:paddingBottom="17dp"
    android:paddingLeft="7dp"
    android:paddingRight="7dp"
    android:id="@+id/home_investment_list_view_root">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="170dp"
        android:id="@+id/imageView"
        android:src="@mipmap/projects_display002_1"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="卡西欧游戏机"
        android:id="@+id/textView53"
        android:background="#82000000"
        android:layout_marginTop="-20dp"
        android:textColor="#ffffffff"
        android:textSize="12dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:gravity="center_vertical|center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffffff">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="7dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout17"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="第3/20期 众筹中"
                    android:id="@+id/textView2"
                    android:textSize="17dp"
                    android:textColor="#ff767676"
                    android:textIsSelectable="false"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:paddingLeft="7dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="3dp"
                    android:paddingLeft="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="收益时间："
                        android:id="@+id/textView3"
                        android:textSize="13dp"
                        android:textColor="#ff767676"
                        android:textIsSelectable="false"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="已结束"
                        android:id="@+id/textView18"
                        android:textSize="13dp"
                        android:textColor="#ff767676"
                        android:textIsSelectable="false"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7dp"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="1"
                        android:id="@+id/textView5"
                        android:textSize="30dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="月"
                        android:id="@+id/textView6"
                        android:textSize="15dp"
                        android:textColor="#ff767676"
                        android:textIsSelectable="false"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="3"
                        android:id="@+id/textView7"
                        android:textSize="30dp"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="日"
                        android:id="@+id/textView8"
                        android:textSize="15dp"
                        android:textColor="#ff767676"
                        android:textIsSelectable="false"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="15:00"
                        android:id="@+id/textView9"
                        android:textSize="30dp"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="点"
                        android:id="@+id/textView10"
                        android:textSize="15dp"
                        android:textColor="#ff767676"
                        android:textIsSelectable="false"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="点击查看收益概率"
                    android:id="@+id/textView22"
                    android:background="#ff1a9cff"
                    android:textColor="#ffffffff"
                    android:textSize="13dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_gravity="left|center"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:id="@+id/linearLayout19">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/invest_project_invested_price"
                    android:id="@+id/textView16"
                    android:textSize="13dp"
                    android:textColor="#ff767676"
                    android:textIsSelectable="false"
                    android:textStyle="bold"
                    android:layout_gravity="right"
                    android:layout_alignTop="@+id/linearLayout15"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/invest_project_invested_quantity"
                    android:id="@+id/textView12"
                    android:textSize="13dp"
                    android:textColor="#ff767676"
                    android:textIsSelectable="false"
                    android:textStyle="bold"
                    android:layout_alignTop="@+id/linearLayout15"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/invest_project_invested_installments"
                    android:id="@+id/textView17"
                    android:textSize="13dp"
                    android:textColor="#ff767676"
                    android:textIsSelectable="false"
                    android:textStyle="bold"
                    android:layout_below="@+id/textView16"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="筹款进度：100%"
                android:id="@+id/textView81"
                android:textSize="10dp"
                android:textColor="#ff767676"
                android:textIsSelectable="false"
                android:textStyle="bold"
                android:layout_gravity="center|right"
                android:paddingRight="7dp"
                android:layout_alignBottom="@+id/linearLayout17"
                android:layout_alignRight="@+id/linearLayout19"
                android:layout_alignEnd="@+id/linearLayout19" />

        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="7dp"
            android:id="@+id/imageView9"
            android:background="#ffffdb90" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="7dp"
            android:id="@+id/imageView2"
            android:background="#fffeb008"
            android:layout_marginTop="-7dp" />

    </LinearLayout>
</LinearLayout>
